# trajectory-drift-guard

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/: ccocr_clas_gemma3_4b.sh  ccocr_gemma3_12b.sh  ccocr_gemma3_4b.sh  ccocr_qwen2_5_vl_3b.sh  ccocr_qwen3_vl_8b.sh  counting_gemma3_12b.sh  counting_gemma3_4b.sh  counting_qwen2_5_vl_3b.sh  counting_qwen3_vl_8b.sh  incline_icdar2019_validate_then_test.sh  mdpbench_arabic_ccocr_top3.sh  run_all_ccocr.sh  run_all_counting_ccocr.sh  run_remaining_after_gemma4b.sh
metadata/: qwen25_vl_word_minus_digit_sigma3p5.json
outputs/paper_tables/: benchmark_sample_manifest.json  best_multilingual_ocr_configs.json
paper_artifacts/: README.md
paper_artifacts/ocr_drift/: qwen_arabic_onetoken_ocr_drift_auc_summary.json  qwen_arabic_onetoken_ocr_drift_compact_summary_20260623.json
reproducibility/counting_20260723/: README.md  (+3 more)
scripts/: compute_clas_stats.py  launch_clas_flores_other_models.sh  launch_scalar_ablation_after_mdpbench.sh  materialize_balanced_counting.py  materialize_icdar2019_mlt_hf.py  materialize_news_commentary_ncwm.py  run_ccocr_residual_add.py  run_clas_ccocr.py  run_countbench_qwen25_baseline.py  run_counting_masked_baselines.py  run_incline_ccocr.py  run_incline_icdar2019_validate.py  run_mdpbench_arabic_ccocr_top3.py  run_mdpbench_ccocr_top3.py  run_mdpbench_clas_best.py  run_mdpbench_incline_selected.py  run_mdpbench_residual_add.py  run_null_cosine_experiment.py  run_scalar_activation_ablation.py  run_search.py  select_clas_bridge_window.py  wait_then_run_scalar_activation_ablation.sh
(+585 files in other folders)
